# gofd

./: .fuse_hidden0000002f00000001  .fuse_hidden00008a1400000002  .gitignore  .nfs00000000018c50cf00000005  .polygon3d.cpp.swp  CMakeLists.txt  Makefile  README  \  ai.cpp  ai.cpp~  ai.h  building.cpp  building.h  collision.cpp  collision.h  collisions.cpp  drawableObject.cpp  drawableObject.h  glm.c  glm.h  globals.cpp  globals.h  gofd  groundbox.cpp  groundbox.h  hud.cpp  hud.h  joystick_testing.cpp  main  main.cpp  main.cpp~  makefile  mapnode.cpp  mapnode.h  matrix.cpp  matrix.h  polygon3d.cpp  polygon3d.cpp~  polygon3d.h  (+19 more)
buildings/: apartmentHighrise.cpp  generic1.cpp  genericOctogon.cpp  window1.cpp
imageLibrary/: .gitignore  Makefile  README.txt  benchmark.sh  bmp.cpp  bmp.h  image.cpp  image.h  image.h~  image_globals.h  jpeg.cpp  jpeg.h  main.cpp  partialFiles.cpp  png.cpp  png.h
imageLibrary/libjpeg-turbo-1.5.1/: Makefile  config.h  config.status  jconfigint.h  libtool
imageLibrary/libjpeg-turbo-1.5.1/md5/: Makefile
imageLibrary/zlib-1.2.11/: zconf.h.cmakein
include/engine/: window.h
include/glad/: glad.h
objects/: cannon.mtl  tank.mtl  tankbody.mtl
old/: Makefile
old/game/: ai.cpp  ai.h  building.cpp  building.h  collisions.cpp  collisions.h  glm.cpp  glm.h  globals.h  groundbox.cpp  groundbox.h  main.cpp  projectile.h  skybox.h  target.cpp
screenshots/: README
src/: CMakeLists.txt
src/engine/: glbuffers.cpp  layered_renderer.cpp  layered_renderer.h  polygon3d.cpp  tesselator.h  vector_basics.cpp  window.cpp  window.h
src/game/: main.cpp
(+24 files in other folders)
